--- a/Resources/views/show.html.twig
+++ b/Resources/views/show.html.twig
@@ -3,12 +3,12 @@
 {% block content %}
 
     <figure class="vic-image-container">
-        <img src="{{ leftPicture.url }}" alt="{{ leftPictureLabel }}">
-        <span class="vic-image-label" data-type="original">{{ leftPictureLabel }}</span>
+        <img src="{{ rightPicture.url }}" alt="{{ rightPictureLabel }}">
+        <span class="vic-image-label" data-type="original">{{ rightPictureLabel }}</span>
 
         <div class="vic-resize-img"> <!-- the resizable image on top -->
-            <img src="{{ rightPicture.url }}" alt="{{ rightPictureLabel }}">
-            <span class="vic-image-label" data-type="modified">{{ rightPictureLabel }}</span>
+            <img src="{{ leftPicture.url }}" alt="{{ leftPictureLabel }}">
+            <span class="vic-image-label" data-type="modified">{{ leftPictureLabel }}</span>
         </div>
 
         <span class="vic-handle"></span> <!-- slider handle -->
